--- a/src/main/webapp/WEB-INF/jspf/heading_authorized.jspf
+++ b/src/main/webapp/WEB-INF/jspf/heading_authorized.jspf
@@ -8,8 +8,13 @@
             bottom: 38px;
         }
 
+        .lang_location {
+            position: center;
+        }
+
         .general_location {
             position: relative;
+            text-align: left;
             bottom: 15px;
         }
     </style>
@@ -17,18 +22,24 @@
 <body>
 <div class="general_location">
     <h3><i>You are logged as - <strong>${sessionScope.userLog}</strong></i></h3>
+
+    <div class="lang_location">
+        <a href="locale?lang=en">EN</a> |
+        <a href="locale?lang=uk">UK</a>
+    </div>
+
     <div class="button_location">
         <form action="signOut">
             <input type="submit" value="Sign out">
         </form>
     </div>
 </div>
-<%--<div class="general_location">--%>
-<%--    <hr>--%>
-<%--</div>--%>
-<p style="text-align: center">The truth is, there are lots of equally iconic <br>
-    Dickinson poems, so consider <br> this a stand-in for them all. <br> Though, as Jay Parini has noted, this <br>
-    poem is perfect, <br> <q>one of Dickinson’s most compressed <br> and <br> chilling attempts to come to terms with mortality.
-</q> </p>
+
+<!-- Delete this part -->
+<%--<p style="text-align: center">The truth is, there are lots of equally iconic <br>--%>
+<%--    Dickinson poems, so consider <br> this a stand-in for them all. <br> Though, as Jay Parini has noted, this <br>--%>
+<%--    poem is perfect, <br> <q>one of Dickinson’s most compressed <br> and <br> chilling attempts to come to terms with mortality.--%>
+<%--</q> </p>--%>
+
 </body>
 </html>
