--- a/src/main/webapp/WEB-INF/jspf/admin_rights_for_menu.jspf
+++ b/src/main/webapp/WEB-INF/jspf/admin_rights_for_menu.jspf
@@ -2,11 +2,6 @@
 <html>
 <head>
 
-    <script type="text/javascript">
-        <%@include file="/WEB-INF/js/submit_deleting_all_outdated_trips.js"%>
-        <%@include file="/WEB-INF/js/add_train_window.js"%>
-    </script>
-
     <style>
         body {font-family: Arial, Helvetica, sans-serif;}
         * {box-sizing: border-box;}
@@ -37,29 +32,29 @@
             width: 280px;
         }
 
-        /* Button used to open the contact form - fixed at the bottom of the page */
-        .add_train-button {
-            background-color: #555;
-            color: white;
-            padding: 16px 20px;
-            border: none;
-            cursor: pointer;
-            opacity: 0.8;
-            position: fixed;
-            bottom: 23px;
-            right: 28px;
-            width: 280px;
-        }
+        /*!* Button used to open the contact form - fixed at the bottom of the page *!*/
+        /*.add_train-button {*/
+        /*    background-color: #555;*/
+        /*    color: white;*/
+        /*    padding: 16px 20px;*/
+        /*    border: none;*/
+        /*    cursor: pointer;*/
+        /*    opacity: 0.8;*/
+        /*    position: fixed;*/
+        /*    bottom: 23px;*/
+        /*    right: 28px;*/
+        /*    width: 280px;*/
+        /*}*/
 
-        /* The popup form - hidden by default */
-        .form-popup {
-            display: none;
-            position: fixed;
-            bottom: 0;
-            right: 15px;
-            border: 3px solid #f1f1f1;
-            z-index: 9;
-        }
+        /*!* The popup form - hidden by default *!*/
+        /*.form-popup-position {*/
+        /*    display: none;*/
+        /*    position: fixed;*/
+        /*    bottom: 0;*/
+        /*    right: 15px;*/
+        /*    border: 3px solid #f1f1f1;*/
+        /*    z-index: 9;*/
+        /*}*/
 
         /* Add styles to the form container */
         .form-container {
@@ -106,11 +101,13 @@
         }
     </style>
 
-
+    <script type="text/javascript">
+        <%@include file="/WEB-INF/js/submit_deleting_all_outdated_trips.js"%>
+    </script>
 </head>
 <body>
 
-<form action="deleteAllOutdated">
+<form action="deleteAllOutdated" method="post">
 <button class="clear_all-outdated" onclick="return submitDeletingOutdated()">Clear all passed trips</button>
 </form>
 
@@ -118,19 +115,19 @@
 <button class="add_trip-button">Add new trip</button>
 </form>
 
-<button class="add_train-button" onclick="openForm()">Add new train</button>
+<%--<button class="add_train-button" onclick="openTrainForm()">Add new train</button>--%>
 
-<!-- Popup form for adding new train -->
-<div class="form-popup" id="myForm">
-    <form action="newTrain" class="form-container">
-        <%--@declare id="trainnumber"--%><h1>New train</h1>
+<%--<!-- Popup form for adding new train -->--%>
+<%--<div class="form-popup-position" id="myTrainForm">--%>
+<%--    <form action="newTrain" method="post" class="form-container">--%>
+<%--        &lt;%&ndash;@declare id="trainnumber"&ndash;%&gt;<h1>New train</h1>--%>
 
-        <label for="trainNumber"><b>Train number</b></label>
-        <input type="text" placeholder="Enter value" name="trainNumber" pattern="[0-9]{3}[А-Я]" minlength="4" maxlength="4" required>
-        <button type="submit" class="btn">Add</button>
-        <button type="button" class="btn cancel" onclick="closeForm()">Close</button>
-    </form>
-</div>
+<%--        <label for="trainNumber"><b>Train number</b></label>--%>
+<%--        <input type="text" placeholder="Enter value" name="trainNumber" pattern="[0-9]{3}[А-Я]" minlength="4" maxlength="4" required>--%>
+<%--        <button type="submit" class="btn">Add</button>--%>
+<%--        <button type="button" class="btn cancel" onclick="closeTrainForm()">Close</button>--%>
+<%--    </form>--%>
+<%--</div>--%>
 
 
 </body>
