--- a/src/main/webapp/WEB-INF/jspf/admin_rights_for_menu.jspf
+++ b/src/main/webapp/WEB-INF/jspf/admin_rights_for_menu.jspf
@@ -28,33 +28,9 @@
             opacity: 0.8;
             position: fixed;
             bottom: 23px;
-            left: 650px;
+            right: 15px;
             width: 280px;
         }
-
-        /*!* Button used to open the contact form - fixed at the bottom of the page *!*/
-        /*.add_train-button {*/
-        /*    background-color: #555;*/
-        /*    color: white;*/
-        /*    padding: 16px 20px;*/
-        /*    border: none;*/
-        /*    cursor: pointer;*/
-        /*    opacity: 0.8;*/
-        /*    position: fixed;*/
-        /*    bottom: 23px;*/
-        /*    right: 28px;*/
-        /*    width: 280px;*/
-        /*}*/
-
-        /*!* The popup form - hidden by default *!*/
-        /*.form-popup-position {*/
-        /*    display: none;*/
-        /*    position: fixed;*/
-        /*    bottom: 0;*/
-        /*    right: 15px;*/
-        /*    border: 3px solid #f1f1f1;*/
-        /*    z-index: 9;*/
-        /*}*/
 
         /* Add styles to the form container */
         .form-container {
