--- a/src/main/webapp/WEB-INF/jspf/heading_authorized.jspf
+++ b/src/main/webapp/WEB-INF/jspf/heading_authorized.jspf
@@ -1,4 +1,5 @@
 <%@ page contentType="text/html;charset=UTF-8" language="java" %>
+<%@ taglib prefix="my" tagdir="/WEB-INF/tags" %>
 <html>
 <head>
     <style>
@@ -111,8 +112,8 @@
 
 </head>
 <body>
-    <!-- Create own lib instead of this -->
-    <h3><i>You are logged as - <strong>${sessionScope.userNS} (${sessionScope.userLogin})</strong></i></h3>
+    <!-- Create own tag-->
+    <my:username userName="${sessionScope.userNS}" userLogin="${sessionScope.userLogin}"/>
 
     <div class="lang_location">
         <a href="locale?lang=en">EN</a> |
