--- a/src/main/webapp/WEB-INF/jspf/admin_rights_for_menu.jspf
+++ b/src/main/webapp/WEB-INF/jspf/admin_rights_for_menu.jspf
@@ -84,27 +84,16 @@
 <body>
 
 <form action="deleteAllOutdated" method="post">
-<button class="clear_all-outdated" onclick="return submitDeletingOutdated()">Clear all passed trips</button>
+<button class="clear_all-outdated" onclick="return submitDeletingOutdated()">
+        <fmt:message key="menu.admin_rights.clear_all_outdated"/>
+</button>
 </form>
 
 <form action="newTrip">
-<button class="add_trip-button">Add new trip</button>
+<button class="add_trip-button">
+        <fmt:message key="menu.admin_rights.add_new_trip"/>
+</button>
 </form>
-
-<%--<button class="add_train-button" onclick="openTrainForm()">Add new train</button>--%>
-
-<%--<!-- Popup form for adding new train -->--%>
-<%--<div class="form-popup-position" id="myTrainForm">--%>
-<%--    <form action="newTrain" method="post" class="form-container">--%>
-<%--        &lt;%&ndash;@declare id="trainnumber"&ndash;%&gt;<h1>New train</h1>--%>
-
-<%--        <label for="trainNumber"><b>Train number</b></label>--%>
-<%--        <input type="text" placeholder="Enter value" name="trainNumber" pattern="[0-9]{3}[А-Я]" minlength="4" maxlength="4" required>--%>
-<%--        <button type="submit" class="btn">Add</button>--%>
-<%--        <button type="button" class="btn cancel" onclick="closeTrainForm()">Close</button>--%>
-<%--    </form>--%>
-<%--</div>--%>
-
 
 </body>
 </html>
