--- a/src/main/webapp/WEB-INF/jspf/admin_rights_for_ticket.jspf
+++ b/src/main/webapp/WEB-INF/jspf/admin_rights_for_ticket.jspf
@@ -1,3 +1,4 @@
+<%@ taglib prefix="fmt" uri="http://java.sun.com/jsp/jstl/fmt" %>
 <%@ page contentType="text/html;charset=UTF-8" language="java" %>
 <html>
 <head>
@@ -7,21 +8,24 @@
     </script>
 
     <style>
-
     </style>
 
 </head>
 <body>
 
 <form style="text-align: right" action="delTicket" method="post">
-    <button class="clear_all-outdated" onclick="return submitDeletingTrip()">Delete ticket</button>
+    <button class="clear_all-outdated" onclick="return submitDeletingTrip()">
+        <fmt:message key="ticket_view.admin_delete"/>
+    </button>
 
     <input type="hidden" name="tripId" value="${requestScope.trip.getId()}">
     <input type="hidden" name="startStation" value="${requestScope.trip.getStartStation()}">
     <input type="hidden" name="endStation" value="${requestScope.trip.getFinalStation()}">
 </form>
-<form action="editTrip">
-    <button class="clear_all-outdated">Edit ticket</button>
+<form style="text-align: right" action="editTrip">
+    <button class="clear_all-outdated">
+        <fmt:message key="ticket_view.admin_edit"/>
+    </button>
     <input type="hidden" name="tripId" value="${requestScope.trip.getId()}">
     <input type="hidden" name="startStation" value="${requestScope.trip.getStartStation()}">
     <input type="hidden" name="depDate" value="${requestScope.trip.getDepartureDate()}">
