add session locale filter and small updates in jsps/jspfs

--- a/src/main/webapp/WEB-INF/jspf/heading_not_authorized.jspf
+++ b/src/main/webapp/WEB-INF/jspf/heading_not_authorized.jspf
@@ -3,7 +3,7 @@
 <head>
     <style>
         <%@ include file="../css/button_location.css"%>
-        <%@ include file="../css/locale_postition.css"%>
+        <%@ include file="../css/locale_position.css"%>
     </style>
 </head>
 
